# sci-adk

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROMPT_QUICK.md  PROMPT_SESSION3.md  QUICKSTART.md  README.md  SECURITY.md  check-docker.sh  demo_e2e.py  pyproject.toml
.claude/: settings.json
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-config-change.sh  handle-cwd-changed.sh  handle-elicitation-result.sh  handle-elicitation.sh  handle-file-changed.sh  handle-instructions-loaded.sh  handle-notification.sh  handle-permission-denied.sh  handle-permission-request.sh  handle-post-compact.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop-failure.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-task-created.sh  handle-teammate-idle.sh  handle-user-prompt-submit.sh  handle-worktree-create.sh  handle-worktree-remove.sh
.claude/rules/: sci-adk-constitution.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.moai/: manifest.json
.moai/config/sections/: git-strategy.yaml  project.yaml  user.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: session-937ebe72-9d86-4afc-8774-f1264d92fe53.md  session-b654caab-96a0-4028-9bef-bc0fd054a229.md
.moai/specs/SPEC-PAPER-GATE-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-SI-AUTHORING-001/: acceptance.md  plan.md  spec.md
design/: abstractions.md  adoption-roadmap.md  constitution.md  decision-engine.md  directory-structure.md  evidence-validity.md  figure-digitization.md  fusion-claude-science.md  g-a-a3-decision.md  handoff-bib-latex-safety.md  handoff-session-2.md  joss-eligibility-plan.md  literature-acquisition.md  milestone-1.md  milestone-3.md  near-submission-package.md  p0-2-outreach-plan.md  p0-2-submission-texts.md  paper-figures-and-si.md  paper-publishing-requirements.md  paper-writing-enforcement.md  release-readiness.md  render-architecture-reframe.md  research-session-enforcement.md  rigor-shell-architecture.md  sci-adk-as-moai.md  sci-adk-productization-plan.md  science-guards.md  session-10-handoff.md  session-3-handoff.md  session-4-handoff.md  session-5-handoff.md  session-6-handoff.md  session-7-handoff.md  session-8-handoff.md  session-9-handoff.md  si-belief-record-split.md  si-bibliography.md  surface-freeze-analysis.md  tool-policy.md
design/handoffs/: session-1-handoff.md  session-2-handoff.md  session-4-handoff.md
docs/: field-report-triage.md  tutorial.md
environments/lean-base/: Dockerfile
environments/python-base/: Dockerfile  requirements.txt
paper/: methods-arxiv.md  methods-arxiv.tex  paper.bib  paper.md
recon/: REPORT.md  agent-skill-inventory.md  cc-meta-rules.md  reusable.md  sw-assumptions.md  tdd-mismatch.md
runs/: README.md
runs/t1-demo/: checkpoints.md  spec.json
runs/t1-demo/claims/: claim-hyp-001.json
runs/t1-demo/evidence/: evi-20260616-054027-0750cfe3.json
runs/t1-demo/paper/: draft.md
runs/t1-godel/: science.md  spec.json
runs/t1-godel/artifacts/literature/: manifest.csv  references.bib
runs/t1-godel/artifacts/literature/pdfs/: Krotko2020.json  McKay2013.json
runs/t1-godel/claims/: claim-hyp-t1.json
runs/t1-godel/evidence/: evi-t1-20260616-111516-ddcad848.json
runs/t1-godel/paper/: draft.md  paper.md
src/sci_adk/: __init__.py  cli.py  config.py  init_session.py
src/sci_adk/adapter/: __init__.py  connector.py  connector_server.py  lean_capability.py  registry.py  t1_capability.py  t1_encoding.py  t1_figures.py
src/sci_adk/core/: __init__.py  claim.py  evidence.py  parser.py  pkgreqs.py  pubreqs.py  spec.py  spec_science.py  validity.py
src/sci_adk/loop/: __init__.py  amend_spec.py  checkpoint_loop.py  claim_updater.py  compiler.py  decision_engine.py  decision_record.py  experiment_runner.py  inquiry.py  judge.py  literature_acquirer.py  literature_triggers.py  prior_work.py  recorded_judge.py  status.py  verdict.py  verify.py
src/sci_adk/provenance/: __init__.py
src/sci_adk/render/: __init__.py  authored_si.py  consistency.py  factref.py  figures.py  novelty.py  number_audit.py  package.py  paper.py  pkgreqs_checks.py  prose.py  pubreqs_checks.py  reproduction.py  si.py
src/sci_adk/runner/: __init__.py  docker_executor.py
src/sci_adk/search/: __init__.py  citation_keys.py  figure_digitize.py  literature_scan.py  manual_literature.py  paperforge_adapter.py  pdf_normalize.py
src/sci_adk/templates/research-workspace/: CLAUDE.md  README.md
src/sci_adk/templates/research-workspace/.claude/: settings.json
src/sci_adk/templates/research-workspace/.claude/agents/: evaluator-novelty.md  evaluator-rigor.md  evaluator-validity.md  expert-experimentalist.md  expert-literature.md  expert-replicator.md  expert-statistician.md  expert-writer.md  (+1 more)
templates/research-workspace/: CLAUDE.md  README.md
tests/: conftest.py  fixtures.py  test_capability_registry.py  test_checkpoint_loop.py  test_citation_keys.py  test_claim.py  test_claim_updater.py  test_cli_literature_triggers.py  test_cli_prior_work.py  test_cli_resolve.py  test_cli_status.py  test_cli_validity.py  test_cli_verb_decomposition.py  test_cli_verify.py  test_compiler.py  test_config_email.py  test_connector_boundary.py  test_connector_server.py  test_consistency.py  test_contested_surfacing.py  test_contested_trigger.py  test_decision_engine.py  test_decision_engine_numeric.py  test_decision_engine_proof_qualitative.py  test_decision_engine_trail_gate.py  test_digitized_end_to_end.py  test_digitized_gate.py  test_digitized_kind.py  test_digitized_verify_digest.py  test_docker_executor.py  test_evidence.py  test_evidence_id_collision.py  test_evidence_validity.py  test_factref.py  test_figure_digitize.py  test_figures.py  test_import_convention.py  test_init_session.py  test_inquiry.py  test_kernel_adapter_seam.py  (+58 more)
tests/fixtures/: t1_proposal.md
(+24 files in other folders)
