[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-adk"
version = "0.1.0"
description = "Research Compiler: 4-pane proposal to paper + code + evidence trail"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    # PDF normalization (src/sci_adk/search/pdf_normalize.py): acquired OA papers
    # are sometimes owner-permission restricted (open fine, but text extraction
    # disabled). pypdf re-writes such PDFs extractable so the agent can read them.
    # Core (not optional): the env-lacks-a-PDF-lib pain is exactly what breaks
    # downstream reading, so "pip install -e ." must bring it. The crypto extra
    # (-> cryptography) is required to handle AES-encrypted PDFs.
    "pypdf[crypto]>=6.0.0",
]

[project.optional-dependencies]
# Acquisition tooling invoked as a subprocess, not imported (see
# src/sci_adk/search/paperforge_adapter.py). Pinned to a git SHA for
# reproducibility; recorded in design/tool-policy.md (addendum 2026-06-16).
# Private repo -- installing this group needs access to ccy5123/paperforge.
#   pip install -e ".[tools]"
tools = [
    "paperforge @ git+https://github.com/ccy5123/paperforge.git@2cec69b5c9e3cdd518463a24f67cf713ff3f0d9e",
]

[project.scripts]
sci-adk = "sci_adk.cli:main"

[tool.setuptools]
# Ship non-.py files declared in MANIFEST.in (the research-workspace kit) inside
# the wheel, not just the sdist. Without this, `graft` only reaches the sdist.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
# `templates/` under the package has no __init__.py so it is NOT importable and is
# not auto-discovered as a package; its contents ride along as package-data below.
# The wheel's only top-level dir stays `sci_adk`.

[tool.setuptools.package-data]
# Belt-and-suspenders alongside MANIFEST.in's `graft`: name the kit's files
# explicitly so they are included even if the manifest path is bypassed. Two globs
# are needed because the first (`**/*`) misses dotfiles while the second (`**/.*`)
# catches the hidden `.claude/` tree (settings.json, hooks, output style, command).
"sci_adk" = [
    "templates/research-workspace/**/*",
    "templates/research-workspace/**/.*",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
markers = [
    "integration: marks integration tests (require Docker)",
]
