[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sci-adk"
version = "0.3.0"
description = "Agentic Discovery Kit (ADK): a rigor / verification system with a domain-general kernel + capability-adapter seam -- 4-pane proposal to paper + code + an evidence trail; agents propose, the engine judges by frozen criteria"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Chan Young Joe", email = "ccy5123ccy@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    # PDF normalization (src/sci_adk/search/pdf_normalize.py): acquired OA papers
    # are sometimes owner-permission restricted (open fine, but text extraction
    # disabled). pypdf re-writes such PDFs extractable so the agent can read them.
    # Core (not optional): the env-lacks-a-PDF-lib pain is exactly what breaks
    # downstream reading, so "pip install -e ." must bring it. The crypto extra
    # (-> cryptography) is required to handle AES-encrypted PDFs.
    "pypdf[crypto]>=6.0.0",
]

[project.optional-dependencies]
# Test/dev tooling for the engineering layer. Per design/tool-policy.md the
# research runtime excludes coverage thresholds and LSP gates, but the tests/
# suite is ordinary pytest and CI runs it.
dev = [
    "pytest>=8.0.0",
    # Coverage is REPORTED in CI, never gated: per design/tool-policy.md sci-adk
    # excludes coverage *thresholds* (no --cov-fail-under). The report is for
    # reviewers (pyOpenSci/JOSS), not a pass/fail signal.
    "pytest-cov>=5.0.0",
]
# Acquisition tooling invoked as a subprocess, not imported (see
# src/sci_adk/search/paperforge_adapter.py). Pinned to a git SHA for
# reproducibility; recorded in design/tool-policy.md (addendum 2026-06-16).
# Private repo -- installing this group needs access to ccy5123/paperforge.
#   pip install -e ".[tools]"
tools = [
    "paperforge @ git+https://github.com/ccy5123/paperforge.git@2cec69b5c9e3cdd518463a24f67cf713ff3f0d9e",
]

[project.scripts]
sci-adk = "sci_adk.cli:main"

[project.urls]
Homepage = "https://github.com/ccy5123/sci-adk"
Repository = "https://github.com/ccy5123/sci-adk"
Issues = "https://github.com/ccy5123/sci-adk/issues"

[tool.setuptools]
# Ship non-.py files declared in MANIFEST.in (the research-workspace kit) inside
# the wheel, not just the sdist. Without this, `graft` only reaches the sdist.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
# `templates/` under the package has no __init__.py so it is NOT importable and is
# not auto-discovered as a package; its contents ride along as package-data below.
# The wheel's only top-level dir stays `sci_adk`.

[tool.setuptools.package-data]
# Belt-and-suspenders alongside MANIFEST.in's `graft`: name the kit's files
# explicitly so they are included even if the manifest path is bypassed. Two globs
# are needed because the first (`**/*`) misses dotfiles while the second (`**/.*`)
# catches the hidden `.claude/` tree (settings.json, hooks, output style, command).
"sci_adk" = [
    "templates/research-workspace/**/*",
    "templates/research-workspace/**/.*",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
markers = [
    "integration: marks integration tests (require Docker)",
]
